Resolve "Accordion arrows not visible on mobile"

--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -8,7 +8,7 @@
 
 .accordion__nav-item {
     font-size: 1.5rem;
-    padding: 1rem 1rem 1rem 3.5rem;
+    padding: 1rem 1rem 1rem 1rem;
     transition: .2s;
     cursor: pointer;
 }
@@ -18,14 +18,12 @@
 }
 
 .accordion__icon--left {
-    font-size: 1.2rem;
+    font-size: 2.5rem;
     line-height: 2.25rem;
-    position: absolute;
-    margin-left: -2.3rem;
     transition: .3s;
-    color: var(--c-link);
+    margin: 0 .5rem 0 -.2rem;
+    color: var(--c-link); /* the --c-link var has darker shade on lightmode for better contrast */
 }
-
 
 .accordion__nav-item--active .accordion__icon--left {
     transform: rotate(90deg);
